...
export const OFFICIAL_SCRIPT_AUTHOR = 'The Pandemonium Institute';
export const OFFICIAL_CAROUSEL_SCRIPT_ID = 'carousel';
export { SUSHI_BUFFET_SCRIPT_ID, SUSHI_BUFFET_SCRIPT_NAME } from '@/utils/script-constants';

const BOTC_RESOURCES_URL = `${BOTC_ROLE_ICON_BASE_URL.replace('/characters', '')}/`;

const officialScriptNames = new Set(['Trouble Brewing', 'Sects and Violets', 'Bad Moon Rising']);

export type RemoteScript = {
  pk: number;
  name: string;
  version: string;
  scriptType: string;
...
